[gd_scene load_steps=4 format=3 uid="uid://vq7puxist6n5"]

[ext_resource type="Texture2D" uid="uid://b2ryvrdu5vyjx" path="res://assets/Backgrounds/Tilesets/TilesetDungeon.png" id="1_au82x"]
[ext_resource type="Script" path="res://Objects/LevelSwitch/level_switch.gd" id="1_b5sr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iud27"]
size = Vector2(14, 10)

[node name="LevelSwitch" type="Area2D"]
collision_layer = 0
script = ExtResource("1_b5sr7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_au82x")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iud27")

[node name="SwitchAudio" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
